<resources>
    <string name="app_name">AndroidMaster</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="calculate">Calculate</string>
    <string name="result">Your BIM is : </string>
    <string name="result_1">Your Result</string>
    <string name="recalculate">Recalculate</string>
    <string name="normal">Normal</string>
    <string name="finalText">This is the final textResult</string>
    <string name="healthy">Great! you are healthy</string>
    <string name="eat_more">Hmmm you need to eat more</string>
    <string name="low_weight">You need to gain weight</string>
    <string name="over_weight">Over weight</string>
    <string name="high_weight">You need to lose weight fatty</string>

    <!-- Todo app -->
    <string name="td_welcome">Welcome!</string>
    <string name="td_category">Category</string>
    <string name="td_tasks">Tasks</string>
    <string name="td_write_something">Write something</string>
    <string name="td_business">Business</string>
    <string name="td_other">Other</string>
    <string name="td_personal">Personal</string>
    <string name="td_add_todo">Add</string>

    <!-- super herp app -->
    <string name="sp_search">Search</string>
    <string name="superhero_stat_intelligence">Intelligence</string>
    <string name="superhero_stat_strength">Strength</string>
    <string name="superhero_stat_speed">Speed</string>
    <string name="superhero_stat_durability">Durability</string>
    <string name="superhero_stat_power">Power</string>
    <string name="superhero_stat_combat">Combat</string>

    <string name="dark_mode">Dark mode</string>
    <string name="light_mode">Light mode</string>

    <string name="dark_mode_Desc">Enable the dark mode in this app</string>

    <string name="light_mode_Desc">Enable the light mode in this app</string>

    <string name="bluetooth"> Bluetooth</string>
    <string name="bluetooth_desc">Enable bluetooth in this app</string>

    <string name="wifi"> Wifi</string>
    <string name="wifi_desc">Enable wifi in this app</string>

    <string name="sound"> Volume</string>

    <string name="vibration"> Vibration</string>
    <string name="vibration_desc">Enable vibration in this app</string>


</resources>
