<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/todo_background_todo_app"
    >

    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/td_write_something"
        android:layout_marginBottom="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        />

    <RadioGroup
        android:id="@+id/rg_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_o1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/td_business"
            android:backgroundTint="@color/todo_business_category"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/rb_o2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/td_other"
            android:backgroundTint="@color/todo_other_category"
            />

        <RadioButton
            android:id="@+id/rb_o3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/td_personal"
            android:backgroundTint="@color/todo_personal_category"
            />

    </RadioGroup>


    <Button
        android:id="@+id/btn_addTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/todo_accent"
        android:text="@string/td_add_todo"
        />

</LinearLayout>