<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/todo_background_todo_app"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".my_app.todoApp.TodoMainActivity">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="35dp"
        android:layout_marginVertical="44dp"
        android:layout_marginHorizontal="32dp"
        android:textAllCaps="true"
        android:text="@string/td_welcome"
        android:textColor="@color/white"
        />

    <TextView
        style="@style/todoSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/td_category"

        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/todoSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/td_tasks"
        android:layout_marginVertical="12dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tasks"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_task"
            android:layout_width="wrap_content"
            android:layout_margin="32dp"
            android:layout_height="wrap_content"
            android:tint="@color/white"
            app:backgroundTint="@color/todo_accent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@android:drawable/ic_input_add"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>