<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/background_app"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".my_app.ImcApp.ResultImcActivity">

    <ImageView
        android:id="@+id/back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@color/background_app"
        android:src="@drawable/ic_arrow_back"
        />

    <TextView
        android:id="@+id/back_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:text="Back to BIM calculator"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        android:textSize="25dp"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/back_button"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/bmi_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/result_1"
        android:textSize="60dp"
        android:textColor="@color/white"
        />

    <androidx.cardview.widget.CardView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_recalculate"
        app:layout_constraintTop_toBottomOf="@+id/bmi_result"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="15dp"
        android:layout_width="0dp"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/result_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/normal"
                android:textColor="@color/white"
                android:textSize="30dp"
                />

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="70dp"
                android:text="24.6"
                android:textColor="@color/white"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:text="@string/finalText"

                />




        </LinearLayout>

    </androidx.cardview.widget.CardView>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_recalculate"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"
        app:circularflow_radiusInDP=""
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:background="@color/background_button"
        android:text="@string/recalculate"
        />


</androidx.constraintlayout.widget.ConstraintLayout>