<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".my_app.superHero.DetailSuperHeroActivity">

    <ProgressBar
        android:id="@+id/circularProgressIndicator"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageView
        android:id="@+id/ivSuperHero"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/detailCV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="235dp"
        app:cardCornerRadius="22dp"
        android:elevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <LinearLayout
            android:id="@+id/ly"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvSuperheroName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="28sp"
                android:textColor="@color/black"
                android:text="Test"
                />

            <TextView
                android:id="@+id/tvSuperheroRealName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:text="Test"
                />

            <TextView
                android:id="@+id/tvPublisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="11sp"
                android:textStyle="italic"
                android:text="Test"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:gravity="bottom"
                android:layout_marginTop="24dp">

                <View
                    android:id="@+id/viewIntelligence"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:background="@color/superhero_stat_intelligence"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>
                <View
                    android:id="@+id/viewStrength"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:background="@color/superhero_stat_strength"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>
                <View
                    android:id="@+id/viewSpeed"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:background="@color/superhero_stat_speed"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>
                <View
                    android:id="@+id/viewDurability"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:background="@color/superhero_stat_durability"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>
                <View
                    android:id="@+id/viewPower"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:background="@color/superhero_stat_power"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>
                <View
                    android:id="@+id/viewCombat"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:background="@color/superhero_stat_combat"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal"
                android:gravity="bottom"
                android:layout_marginTop="5dp"
                >

                <TextView
                    android:id="@+id/tVIntelligence"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:text="@string/superhero_stat_intelligence"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/tVStrength"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:text="@string/superhero_stat_strength"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/tVSpeed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:text="@string/superhero_stat_speed"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/tVDurability"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:text="@string/superhero_stat_durability"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/tVPower"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:text="@string/superhero_stat_power"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/tVCombat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:text="@string/superhero_stat_combat"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>